Added home app and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,11 @@
     {% block page_header %}
     {% endblock %}
 
-    
+    {% block content %}
+    {% endblock %}
+
+    {% block postloadjs %}
+    {% endblock %}
 
   </body>
 </html>
